--- a/payjp/src/main/res/layout/payjp_card_form_view.xml
+++ b/payjp/src/main/res/layout/payjp_card_form_view.xml
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="creditCardNumber"
-                android:imeOptions="actionNext"
+                android:imeOptions="flagNoExtractUi|actionNext"
                 android:inputType="phone"
                 android:maxLines="1"
                 android:nextFocusForward="@id/input_edit_expiration"
@@ -66,7 +66,7 @@
                 android:id="@+id/input_edit_expiration"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:imeOptions="actionNext"
+                android:imeOptions="flagNoExtractUi|actionNext"
                 android:inputType="date"
                 android:maxLines="1"
                 android:nextFocusForward="@id/input_edit_cvc"
@@ -89,7 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="creditCardSecurityCode"
-                android:imeOptions="actionNext"
+                android:imeOptions="flagNoExtractUi|actionNext"
                 android:inputType="numberPassword"
                 android:maxLines="1"
                 android:nextFocusForward="@id/input_edit_holder_name"
@@ -110,7 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="name"
-                android:imeOptions="actionDone"
+                android:imeOptions="flagNoExtractUi|actionDone"
                 android:inputType="textCapCharacters"
                 android:maxLines="1"
                 tools:targetApi="o"
