--- a/payjp/src/main/res/layout/payjp_card_accepted_brand_item_view.xml
+++ b/payjp/src/main/res/layout/payjp_card_accepted_brand_item_view.xml
@@ -27,4 +27,5 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        tools:src="@drawable/logo_visa" />
