--- a/payjp/src/main/res/values/colors.xml
+++ b/payjp/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~
-  ~ Copyright (c) 2018 PAY, Inc.
+  ~ Copyright (c) 2019 PAY, Inc.
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
@@ -21,17 +22,8 @@
   ~ SOFTWARE.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="jp.pay.android">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <application>
-        <activity
-                android:name=".ui.PayjpCardFormActivity"
-                android:theme="@style/Payjp.Theme.CardForm"
-                android:enabled="true"
-                android:exported="false" />
-    </application>
-
-</manifest>
+<resources>
+    <color name="payjp_primaryColor">#198fcc</color>
+    <color name="payjp_primaryDarkColor">#00629b</color>
+    <color name="payjp_secondaryColor">#69737f</color>
+</resources>
