--- a/payjp/src/main/res/values/styles.xml
+++ b/payjp/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~
-  ~ Copyright (c) 2018 PAY, Inc.
+  ~ Copyright (c) 2019 PAY, Inc.
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
@@ -21,17 +22,15 @@
   ~ SOFTWARE.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="jp.pay.android">
+<resources>
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <style name="Payjp.Theme.BaseCardForm" parent="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="buttonStyle">@style/Widget.MaterialComponents.Button</item>
+        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense</item>
+        <item name="colorPrimary">@color/payjp_primaryColor</item>
+        <item name="colorPrimaryDark">@color/payjp_primaryDarkColor</item>
+        <item name="colorSecondary">@color/payjp_secondaryColor</item>
+    </style>
+    <style name="Payjp.Theme.CardForm" parent="Payjp.Theme.BaseCardForm"/>
 
-    <application>
-        <activity
-                android:name=".ui.PayjpCardFormActivity"
-                android:theme="@style/Payjp.Theme.CardForm"
-                android:enabled="true"
-                android:exported="false" />
-    </application>
-
-</manifest>
+</resources>
