--- a/payjp/src/main/res/layout/payjp_card_form_view.xml
+++ b/payjp/src/main/res/layout/payjp_card_form_view.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:importantForAutofill="no"
         android:orientation="vertical"
+        tools:theme="@style/Payjp.Theme.CardForm"
         tools:targetApi="o">
 
     <com.google.android.material.textfield.TextInputLayout
