Add card display view.

--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_view_2.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_view_2.xml
@@ -31,61 +31,10 @@
         tools:theme="@style/Payjp.Theme.CardForm"
         tools:targetApi="o">
 
-    <FrameLayout
-            android:clipToPadding="false"
-            android:layout_width="320dp"
-            android:layout_height="220dp"
-            android:layout_gravity="center_horizontal"
-            android:padding="20dp"
-            android:layout_margin="20dp">
-
-        <FrameLayout
-                android:id="@+id/card_display_back"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:targetApi="lollipop">
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="ura"
-                    android:layout_gravity="center" />
-
-        </FrameLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/card_display_front"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:background="#ccc"
-                tools:targetApi="lollipop">
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:fontFamily="@font/space_mono"
-                    android:text="XXXX XXXX XXXX XXXX"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0"
-                    android:textSize="18sp" />
-
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:fontFamily="@font/space_mono"
-                    android:text="XX/XX"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:textSize="18sp" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </FrameLayout>
+    <jp.pay.android.ui.widget.PayjpCardDisplayView
+            android:id="@+id/card_display"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout_number"
