--- a/payjp-android-cardform/src/main/res/values/styles.xml
+++ b/payjp-android-cardform/src/main/res/values/styles.xml
@@ -32,5 +32,13 @@
         <item name="colorSecondary">@color/payjp_secondaryColor</item>
     </style>
     <style name="Payjp.Theme.CardForm" parent="Payjp.Theme.BaseCardForm"/>
+    
+    <style name="Payjp.Theme.CardForm.Display">
+        <item name="android:textViewStyle">@style/PayjpCardDisplayTextView</item>
+    </style>
+
+    <style name="PayjpCardDisplayTextView" parent="Widget.MaterialComponents.TextView">
+        <item name="android:fontFamily">@font/space_mono</item>
+    </style>
 
 </resources>
