Bind input to display.

--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_activity.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_activity.xml
@@ -84,8 +84,7 @@
                 <FrameLayout
                         android:id="@+id/card_form_view"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp" />
+                        android:layout_height="wrap_content" />
 
             </LinearLayout>
 
