--- a/payjp-android-cardform/src/main/res/layout/payjp_card_display_view.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_display_view.xml
@@ -26,8 +26,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:clipToPadding="false"
-        android:layout_width="320dp"
-        android:layout_height="220dp"
+        android:layout_width="300dp"
+        android:layout_height="210dp"
         android:layout_gravity="center_horizontal"
         android:padding="20dp"
         android:theme="@style/Payjp.Theme.CardForm.Display">
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:text="4242 4242 4242 4242"
+                android:text="XXXX XXXX XXXX XXXX"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,35 +66,35 @@
                 app:layout_constraintHorizontal_bias="0"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textSize="20sp" />
+                android:textSize="18sp" />
 
         <TextView
                 android:id="@+id/display_expiration"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:text="12/28"
+                android:text="XX/XX"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/display_holder"
                 app:layout_constraintHorizontal_bias="1"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
         <TextView
                 android:id="@+id/display_holder"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
-                android:text="JOHN DOE"
+                android:text="NAME"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/display_expiration"
                 app:layout_constraintHorizontal_bias="0"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
