--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_expiration_layout.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_expiration_layout.xml
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~
-  ~ Copyright (c) 2019 PAY, Inc.
+  ~ Copyright (c) 2020 PAY, Inc.
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
@@ -21,24 +22,27 @@
   ~ SOFTWARE.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:importantForAutofill="no"
-        android:orientation="vertical"
-        tools:theme="@style/Payjp.Theme.CardForm"
-        tools:targetApi="o">
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <jp.pay.android.ui.widget.PayjpCardDisplayView
-            android:id="@+id/card_display"
+    <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/input_layout_expiration"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/payjp_card_form_margin"
+            android:hint="@string/payjp_card_form_expiration_label">
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/form_element_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        <jp.pay.android.ui.widget.CardExpirationEditText
+                android:id="@+id/input_edit_expiration"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="flagNoExtractUi|actionNext"
+                android:inputType="date"
+                android:maxLines="1"
+                tools:text="12/20" />
 
-</LinearLayout>
+    </com.google.android.material.textfield.TextInputLayout>
+
+</FrameLayout>
