--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_view_2.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_view_2.xml
@@ -22,7 +22,6 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,9 +35,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/form_element_recycler_view"
+    <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/form_element_pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:orientation="horizontal"/>
 
 </LinearLayout>
