--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_activity.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_activity.xml
@@ -79,6 +79,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
+                        android:focusableInTouchMode="false"
                         android:padding="16dp"/>
 
                 <FrameLayout
