--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_number_layout.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_number_layout.xml
@@ -24,7 +24,9 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/payjp_card_form_element_margin"
+        android:layout_marginRight="@dimen/payjp_card_form_element_margin"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
