--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_cvc_layout.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_cvc_layout.xml
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="creditCardSecurityCode"
-                android:imeOptions="flagNoExtractUi|actionDone"
+                android:imeOptions="flagNoExtractUi|actionNext"
                 android:inputType="numberPassword"
                 android:maxLines="1"
                 tools:targetApi="o"
