--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_view_2.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_view_2.xml
@@ -39,6 +39,7 @@
             android:id="@+id/form_element_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="16dp"
             android:orientation="horizontal"/>
 
 </LinearLayout>
