--- a/payjp-android-cardform/src/main/res/layout/payjp_card_form_activity.xml
+++ b/payjp-android-cardform/src/main/res/layout/payjp_card_form_activity.xml
@@ -71,15 +71,14 @@
             <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="16dp">
+                    android:orientation="vertical">
 
                 <jp.pay.android.ui.widget.PayjpAcceptedBrandsView
                         android:id="@+id/accepted_brands"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:focusableInTouchMode="false"
+                        android:layout_marginTop="16dp"
                         android:padding="16dp"/>
 
                 <FrameLayout
