--- a/payjp-android-verifier/src/main/res/values/styles.xml
+++ b/payjp-android-verifier/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~
-  ~ Copyright (c) 2019 PAY, Inc.
+  ~ Copyright (c) 2020 PAY, Inc.
   ~
   ~ Permission is hereby granted, free of charge, to any person obtaining a copy
   ~ of this software and associated documentation files (the "Software"), to deal
@@ -21,16 +22,13 @@
   ~ SOFTWARE.
   -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="jp.pay.android.verifier">
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="Payjp.Theme.Translucent" parent="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowTranslucentNavigation" tools:ignore="NewApi">true</item>
+    </style>
 
-    <application>
-
-        <activity android:name=".ui.PayjpVerifierRedirectActivity"
-                android:theme="@style/Payjp.Theme.Translucent"
-                android:launchMode="singleTop"
-                android:enabled="true"/>
-
-    </application>
-
-</manifest>
+</resources>
